--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-BeautifulSoup4>=4.3.2
-py2-ipaddress>=3.4.1
-pymongo
-requests
-urllib3
-gevent
-grequests
+BeautifulSoup4>=4.11.1
+motor==3.0.0
+httpx>=0.23.0
+dnspython>=2.2.1
